--- a/inventory-management-system/public/index.html
+++ b/inventory-management-system/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
     <!--
